--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ dashmap = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 thiserror = { workspace = true }
+rusqlite = { workspace = true }
 
 [dev-dependencies]
+tempfile = "3.10"
