--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 thiserror = { workspace = true }
 rusqlite = { workspace = true }
+async-trait = { workspace = true }
+tokio = { workspace = true }
+pulldown-cmark = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3.10"
