feat(plexus): add spike test harness with automated investigations
Add infrastructure for running spike investigations against test corpora
without requiring the Manza UI.

Test harness:
- Add test-corpora as git submodule (pkm-webdev, arch-wiki, etc.)
- Add tests/common/ helpers (corpus loading, graph building, metrics)
- Add mock LLM analyzer for testing without API calls
- Add real_llm feature flag for toggling LLM modes

Spike tests implemented:
- spike_01_connectivity: Graph reachability from PageRank seeds
- spike_07_link_density: Section link density variance (CV)
- spike_08_hierarchy: Document heading structure analysis

Initial baseline results (Run 001):
- Connectivity: NO-GO across all corpora (10-40% reachable)
- Link Density: GO (high variance validates section-level approach)
- Hierarchy: Mixed (corpus-dependent)

Documentation:
- Update SPIKE-INVESTIGATION.md with test harness setup
- Add EXPERIMENT-LOG.md for tracking automated run results

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[features]
+default = []
+# Enable real LLM calls for spike tests; when disabled, tests use mock responses
+real_llm = []
+
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -21,3 +26,6 @@ pulldown-cmark = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3.10"
+walkdir = "2.4"
+tokio-test = "0.4"
+regex-lite = "0.1"
