feat: ExtractionCoordinator Phase 1 synchronous extraction (ADR-019)
New adapter handling extract-file input kind:
- Phase 1 registration: file node (MIME type, size, path), concept
  nodes from YAML frontmatter, extraction status tracking
- Metadata failure isolation: corrupt frontmatter still registers file
- MIME type dispatch: selects Phase 2 adapter by file type
- Concurrency control: semaphore-based limits per phase type
- Adds serde_yaml dependency for frontmatter parsing

Scenarios covered: Phase 1 sync, metadata failure, MIME dispatch,
status tracking, distinct adapter IDs, concurrency limits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rusqlite = { version = "0.32", features = ["bundled"] }
 async-trait = "0.1"
 tokio = { version = "1.0", features = ["full"] }
 pulldown-cmark = "0.10"
+serde_yaml = "0.9"
 
 # MCP server
 rmcp = { version = "0.14", features = ["server", "transport-io"] }
