feat: SubprocessClient spawns llm-orc MCP server over stdio (ADR-021)
Production LlmOrcClient implementation that:
- Spawns `llm-orc m serve --transport stdio` as a child process
- Performs MCP handshake via rmcp client
- Calls tools (invoke, set_project) via MCP JSON-RPC
- Gracefully handles llm-orc not being installed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ pulldown-cmark = "0.10"
 serde_yaml = "0.9"
 
 # MCP server
-rmcp = { version = "0.14", features = ["server", "transport-io"] }
+rmcp = { version = "0.14", features = ["server", "client", "transport-io", "transport-child-process"] }
 schemars = { version = "1.0", features = ["chrono04"] }
 getrandom = "0.2"
 
