fix: SubprocessClient keeps RunningService alive for subprocess lifetime
SubprocessClient::connect() stored only the Peer handle, dropping the
RunningService that owns the transport. Every call after handshake got
"Transport closed". Now stores RunningService<RoleClient, ()> alongside
the Peer.

Also: cmd_analyze passes project_dir so llm-orc finds .llm-orc/,
renamed ensemble to graph-analysis (matches CLI default), added live
integration test (requires llm-orc installed, run with --ignored).

--- a/.llm-orc/ensembles/graph-analysis.yaml
+++ b/.llm-orc/ensembles/graph-analysis.yaml
@@ -1,4 +1,4 @@
-name: plexus-graph-analysis
+name: graph-analysis
 description: >
   Run PageRank and community detection on a Plexus context graph.
   Input: graph-export JSON (docs/schemas/graph-export.schema.json).
