feat: semantic extraction fan-out pipeline with Ollama verification
- Add extract_content.py script: reads files, detects MIME, chunks by
  section boundaries or line count for fan-out processing
- Add semantic-extraction ensemble: 3-stage pipeline using fan_out for
  parallel chunk-level concept extraction via gemma3:1b
- Fix field name mismatch: ensemble prompts now use label/weight
  (matching parse_response), parser accepts name/confidence as fallback
- Add extract_json() helper: handles LLM responses that wrap JSON in
  markdown fences or explanation prose
- Fix AgentResult deserialization: fan-out gathered results have array
  responses, custom deserializer coerces to JSON string
- Add 3 live integration tests (all passing with Ollama):
  - Single-agent extraction (16s, 12 concepts from 5 sentences)
  - Fan-out pipeline on README.md (40s, 5 merged concepts)
  - Fallback field name unit test

--- a/.llm-orc/ensembles/plexus-semantic-micro.yaml
+++ b/.llm-orc/ensembles/plexus-semantic-micro.yaml
@@ -17,10 +17,10 @@ agents:
       Return ONLY valid JSON in this exact format (no other text):
       {
         "concepts": [
-          {"name": "concept name", "type": "concept|entity|topic|technology|action", "confidence": 0.9}
+          {"label": "concept name", "confidence": 0.9}
         ],
         "relationships": [
-          {"source": "concept1", "target": "concept2", "relationship": "implements|describes|depends_on|related_to|part_of|uses|creates", "confidence": 0.8}
+          {"source": "concept1", "target": "concept2", "relationship": "implements|describes|depends_on|related_to|part_of|uses|creates", "weight": 0.8}
         ]
       }
 
