--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ path = "src/bin/plexus.rs"
 default = []
 # Enable real LLM calls for spike tests; when disabled, tests use mock responses
 real_llm = []
+# ONNX-based text embeddings (fastembed) and persistent vector search (sqlite-vec)
+embeddings = ["dep:fastembed"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -37,6 +39,9 @@ getrandom = "0.2"
 # CLI
 clap = { version = "4", features = ["derive"] }
 dirs = "5.0"
+
+# Embeddings (optional, behind `embeddings` feature)
+fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
 
 [dev-dependencies]
 tempfile = "3.10"
