--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ default = []
 # Enable real LLM calls for spike tests; when disabled, tests use mock responses
 real_llm = []
 # ONNX-based text embeddings (fastembed) and persistent vector search (sqlite-vec)
-embeddings = ["dep:fastembed"]
+embeddings = ["dep:fastembed", "dep:sqlite-vec"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -42,6 +42,7 @@ dirs = "5.0"
 
 # Embeddings (optional, behind `embeddings` feature)
 fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
+sqlite-vec = { version = "0.1", optional = true }
 
 [dev-dependencies]
 tempfile = "3.10"
